--- a/learnopengl-com/learnopengl-com.vcxproj
+++ b/learnopengl-com/learnopengl-com.vcxproj
@@ -129,7 +129,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\HelloRectangle.cpp" />
+    <ClCompile Include="src\HelloTriangle.cpp" />
     <ClCompile Include="src\Application.cpp" />
+    <ClCompile Include="src\util\Shader.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\Hello.h" />
+    <ClInclude Include="src\HelloRectangle.h" />
+    <ClInclude Include="src\HelloTriangle.h" />
+    <ClInclude Include="src\util\Shader.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="res\shader\fragment.shader" />
+    <None Include="res\shader\vertex.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
