--- a/learnopengl-com/learnopengl-com.vcxproj.filters
+++ b/learnopengl-com/learnopengl-com.vcxproj.filters
@@ -18,32 +18,51 @@
     <ClCompile Include="src\Application.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
-    <ClCompile Include="src\HelloTriangle.cpp">
-      <Filter>File di origine</Filter>
-    </ClCompile>
     <ClCompile Include="src\util\Shader.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
-    <ClCompile Include="src\HelloRectangle.cpp">
+    <ClCompile Include="src\HelloTriangle\HelloRectangle.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\HelloTriangle\HelloTriangle.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\HelloTriangle\Exercise1.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\HelloTriangle\Exercise2.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\HelloTriangle\Exercise3.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\HelloTriangle.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
     <ClInclude Include="src\util\Shader.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
-    <ClInclude Include="src\HelloRectangle.h">
+    <ClInclude Include="src\HelloTriangle\Hello.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
-    <ClInclude Include="src\Hello.h">
+    <ClInclude Include="src\HelloTriangle\HelloRectangle.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="src\HelloTriangle\HelloTriangle.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="src\HelloTriangle\Exercise1.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="src\HelloTriangle\Exercise2.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="src\HelloTriangle\Exercise3.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shader\vertex.shader" />
     <None Include="res\shader\fragment.shader" />
+    <None Include="res\shader\fragment_yellow.shader" />
   </ItemGroup>
 </Project>
