--- a/learnopengl-com/learnopengl-com.vcxproj
+++ b/learnopengl-com/learnopengl-com.vcxproj
@@ -129,6 +129,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\GS-Shaders\ColorAttribute.cpp" />
     <ClCompile Include="src\HelloTriangle\Exercise3.cpp" />
     <ClCompile Include="src\HelloTriangle\Exercise2.cpp" />
     <ClCompile Include="src\HelloTriangle\Exercise1.cpp" />
@@ -136,8 +137,10 @@
     <ClCompile Include="src\HelloTriangle\HelloTriangle.cpp" />
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\util\Shader.cpp" />
+    <ClCompile Include="src\GS-Shaders\Uniforms.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\GS-Shaders\ColorAttribute.h" />
     <ClInclude Include="src\HelloTriangle\Exercise3.h" />
     <ClInclude Include="src\HelloTriangle\Exercise2.h" />
     <ClInclude Include="src\HelloTriangle\Exercise1.h" />
@@ -145,11 +148,15 @@
     <ClInclude Include="src\HelloTriangle\HelloRectangle.h" />
     <ClInclude Include="src\HelloTriangle\HelloTriangle.h" />
     <ClInclude Include="src\util\Shader.h" />
+    <ClInclude Include="src\GS-Shaders\Uniforms.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shader\fragment.shader" />
+    <None Include="res\shader\fragment_colorattr.shader" />
+    <None Include="res\shader\fragment_uniform.shader" />
     <None Include="res\shader\fragment_yellow.shader" />
     <None Include="res\shader\vertex.shader" />
+    <None Include="res\shader\vertex_colorattr.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
