load multiple textures

--- a/learnopengl-com/learnopengl-com.vcxproj.filters
+++ b/learnopengl-com/learnopengl-com.vcxproj.filters
@@ -54,6 +54,15 @@
     <ClCompile Include="src\GS-Shaders\Exercise3.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="src\vendor\stb_image\stb_image.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\GS-Textures\FirstTexture.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\GS-Textures\MixTextures.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\HelloTriangle\Hello.h">
@@ -95,6 +104,15 @@
     <ClInclude Include="src\GS-Shaders\Exercise3.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
+    <ClInclude Include="src\vendor\stb_image\stb_image.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GS-Textures\FirstTexture.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GS-Textures\MixTextures.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shader\vertex.shader" />
@@ -107,5 +125,16 @@
     <None Include="res\shader\right_shift_vertex.shader" />
     <None Include="res\shader\position_as_color_fragment.shader" />
     <None Include="res\shader\output_position_vertex.shader" />
+    <None Include="res\shader\GS-Textures\first_texture_fragment.shader" />
+    <None Include="res\shader\GS-Textures\first_texture_vertex.shader" />
+    <None Include="res\shader\GS-Textures\mix_textures_fragment.shader" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="res\textures\awesomeface.png">
+      <Filter>File di risorse</Filter>
+    </Image>
+    <Image Include="res\textures\container.jpg">
+      <Filter>File di risorse</Filter>
+    </Image>
   </ItemGroup>
 </Project>
