--- a/learnopengl-com/learnopengl-com.vcxproj
+++ b/learnopengl-com/learnopengl-com.vcxproj
@@ -131,6 +131,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\GS-Textures\MixTextures.cpp" />
+    <ClCompile Include="src\GS-Textures\FirstTexture.cpp" />
     <ClCompile Include="src\GS-Shaders\Exercise3.cpp" />
     <ClCompile Include="src\GS-Shaders\Exercise2.cpp" />
     <ClCompile Include="src\GS-Shaders\Exercise1.cpp" />
@@ -144,8 +146,11 @@
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\GS-Shaders\Uniforms.cpp" />
     <ClCompile Include="src\util\Shader.cpp" />
+    <ClCompile Include="src\vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\GS-Textures\MixTextures.h" />
+    <ClInclude Include="src\GS-Textures\FirstTexture.h" />
     <ClInclude Include="src\GS-Shaders\Exercise3.h" />
     <ClInclude Include="src\GS-Shaders\Exercise2.h" />
     <ClInclude Include="src\GS-Shaders\Exercise1.h" />
@@ -159,18 +164,26 @@
     <ClInclude Include="src\HelloTriangle\HelloTriangle.h" />
     <ClInclude Include="src\GS-Shaders\Uniforms.h" />
     <ClInclude Include="src\util\Shader.h" />
+    <ClInclude Include="src\vendor\stb_image\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shader\fragment.shader" />
     <None Include="res\shader\fragment_colorattr.shader" />
     <None Include="res\shader\fragment_uniform.shader" />
     <None Include="res\shader\fragment_yellow.shader" />
+    <None Include="res\shader\GS-Textures\first_texture_fragment.shader" />
+    <None Include="res\shader\GS-Textures\first_texture_vertex.shader" />
+    <None Include="res\shader\GS-Textures\mix_textures_fragment.shader" />
     <None Include="res\shader\output_position_vertex.shader" />
     <None Include="res\shader\position_as_color_fragment.shader" />
     <None Include="res\shader\right_shift_vertex.shader" />
     <None Include="res\shader\upside_down_vertex.shader" />
     <None Include="res\shader\vertex.shader" />
     <None Include="res\shader\vertex_colorattr.shader" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="res\textures\awesomeface.png" />
+    <Image Include="res\textures\container.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
