--- a/learnopengl-com/learnopengl-com.vcxproj
+++ b/learnopengl-com/learnopengl-com.vcxproj
@@ -131,6 +131,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\GS-Textures\MixUniform.cpp" />
+    <ClCompile Include="src\GS-Textures\Exercise3.cpp" />
     <ClCompile Include="src\GS-Textures\MixTextures.cpp" />
     <ClCompile Include="src\GS-Textures\FirstTexture.cpp" />
     <ClCompile Include="src\GS-Shaders\Exercise3.cpp" />
@@ -138,6 +140,7 @@
     <ClCompile Include="src\GS-Shaders\Exercise1.cpp" />
     <ClCompile Include="src\core\Shader.cpp" />
     <ClCompile Include="src\GS-Shaders\ColorAttribute.cpp" />
+    <ClCompile Include="src\GS-Textures\WrappingMethods.cpp" />
     <ClCompile Include="src\HelloTriangle\Exercise3.cpp" />
     <ClCompile Include="src\HelloTriangle\Exercise2.cpp" />
     <ClCompile Include="src\HelloTriangle\Exercise1.cpp" />
@@ -149,6 +152,8 @@
     <ClCompile Include="src\vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\GS-Textures\MixUniform.h" />
+    <ClInclude Include="src\GS-Textures\Exercise3.h" />
     <ClInclude Include="src\GS-Textures\MixTextures.h" />
     <ClInclude Include="src\GS-Textures\FirstTexture.h" />
     <ClInclude Include="src\GS-Shaders\Exercise3.h" />
@@ -156,6 +161,7 @@
     <ClInclude Include="src\GS-Shaders\Exercise1.h" />
     <ClInclude Include="src\core\Shader.h" />
     <ClInclude Include="src\GS-Shaders\ColorAttribute.h" />
+    <ClInclude Include="src\GS-Textures\WrappingMethods.h" />
     <ClInclude Include="src\HelloTriangle\Exercise3.h" />
     <ClInclude Include="src\HelloTriangle\Exercise2.h" />
     <ClInclude Include="src\HelloTriangle\Exercise1.h" />
@@ -173,7 +179,9 @@
     <None Include="res\shader\fragment_yellow.shader" />
     <None Include="res\shader\GS-Textures\first_texture_fragment.shader" />
     <None Include="res\shader\GS-Textures\first_texture_vertex.shader" />
+    <None Include="res\shader\GS-Textures\mix_textures_flip_horizontally_fragment.shader" />
     <None Include="res\shader\GS-Textures\mix_textures_fragment.shader" />
+    <None Include="res\shader\GS-Textures\mix_uniform_fragment.shader" />
     <None Include="res\shader\output_position_vertex.shader" />
     <None Include="res\shader\position_as_color_fragment.shader" />
     <None Include="res\shader\right_shift_vertex.shader" />
