--- a/learnopengl-com/learnopengl-com.vcxproj
+++ b/learnopengl-com/learnopengl-com.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\GS-Transformations\RotateScale.cpp" />
     <ClCompile Include="src\GS-Textures\MixUniform.cpp" />
     <ClCompile Include="src\GS-Textures\Exercise3.cpp" />
     <ClCompile Include="src\GS-Textures\MixTextures.cpp" />
@@ -153,6 +154,7 @@
     <ClCompile Include="src\vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\GS-Transformations\RotateScale.h" />
     <ClInclude Include="src\GS-Textures\MixUniform.h" />
     <ClInclude Include="src\GS-Textures\Exercise3.h" />
     <ClInclude Include="src\GS-Textures\MixTextures.h" />
@@ -465,6 +467,8 @@
     <None Include="res\shader\GS-Textures\mix_textures_flip_horizontally_fragment.shader" />
     <None Include="res\shader\GS-Textures\mix_textures_fragment.shader" />
     <None Include="res\shader\GS-Textures\mix_uniform_fragment.shader" />
+    <None Include="res\shader\GS-Transformations\transformation_fragment.shader" />
+    <None Include="res\shader\GS-Transformations\transformation_vertex.shader" />
     <None Include="res\shader\output_position_vertex.shader" />
     <None Include="res\shader\position_as_color_fragment.shader" />
     <None Include="res\shader\right_shift_vertex.shader" />
