--- a/learnopengl-com/learnopengl-com.vcxproj
+++ b/learnopengl-com/learnopengl-com.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\GS-Transformations\RotateOverTime.cpp" />
     <ClCompile Include="src\GS-Transformations\RotateScale.cpp" />
     <ClCompile Include="src\GS-Textures\MixUniform.cpp" />
     <ClCompile Include="src\GS-Textures\Exercise3.cpp" />
@@ -154,6 +155,7 @@
     <ClCompile Include="src\vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\GS-Transformations\RotateOverTime.h" />
     <ClInclude Include="src\GS-Transformations\RotateScale.h" />
     <ClInclude Include="src\GS-Textures\MixUniform.h" />
     <ClInclude Include="src\GS-Textures\Exercise3.h" />
