--- a/learnopengl-com/learnopengl-com.vcxproj.filters
+++ b/learnopengl-com/learnopengl-com.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="src\GS-Transformations\RotateScale.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="src\GS-Transformations\RotateOverTime.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\HelloTriangle\Hello.h">
@@ -984,6 +987,9 @@
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="src\GS-Transformations\RotateScale.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GS-Transformations\RotateOverTime.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
