exercises: FPS camera and lookAt matrix by hand

--- a/learnopengl-com/learnopengl-com.vcxproj.filters
+++ b/learnopengl-com/learnopengl-com.vcxproj.filters
@@ -87,6 +87,12 @@
     <ClCompile Include="src\GS-CoordinateSystems\Cube.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="src\core\Camera.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\GS-CoordinateSystems\ControlCamera.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\HelloTriangle\Hello.h">
@@ -1002,6 +1008,12 @@
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="src\GS-CoordinateSystems\Cube.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\Camera.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GS-CoordinateSystems\ControlCamera.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
