--- a/learnopengl-com/learnopengl-com.vcxproj
+++ b/learnopengl-com/learnopengl-com.vcxproj
@@ -131,6 +131,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\GS-CoordinateSystems\ControlCamera.cpp" />
+    <ClCompile Include="src\core\Camera.cpp" />
     <ClCompile Include="src\GS-CoordinateSystems\Cube.cpp" />
     <ClCompile Include="src\GS-CoordinateSystems\Going3D.cpp" />
     <ClCompile Include="src\GS-Transformations\RotateOverTime.cpp" />
@@ -157,6 +159,8 @@
     <ClCompile Include="src\vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\GS-CoordinateSystems\ControlCamera.h" />
+    <ClInclude Include="src\core\Camera.h" />
     <ClInclude Include="src\GS-CoordinateSystems\Cube.h" />
     <ClInclude Include="src\GS-CoordinateSystems\Going3D.h" />
     <ClInclude Include="src\GS-Transformations\RotateOverTime.h" />
