--- a/learnopengl-com/learnopengl-com.vcxproj
+++ b/learnopengl-com/learnopengl-com.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\GS-Lighting\Lighting.cpp" />
     <ClCompile Include="src\GS-CoordinateSystems\ControlCamera.cpp" />
     <ClCompile Include="src\core\Camera.cpp" />
     <ClCompile Include="src\GS-CoordinateSystems\Cube.cpp" />
@@ -159,6 +160,7 @@
     <ClCompile Include="src\vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\GS-Lighting\Lighting.h" />
     <ClInclude Include="src\GS-CoordinateSystems\ControlCamera.h" />
     <ClInclude Include="src\core\Camera.h" />
     <ClInclude Include="src\GS-CoordinateSystems\Cube.h" />
@@ -472,6 +474,9 @@
     <None Include="res\shader\fragment_colorattr.shader" />
     <None Include="res\shader\fragment_uniform.shader" />
     <None Include="res\shader\fragment_yellow.shader" />
+    <None Include="res\shader\GS-Lighting\object_fragment.shader" />
+    <None Include="res\shader\GS-Lighting\light_fragment.shader" />
+    <None Include="res\shader\GS-Lighting\vertex.shader" />
     <None Include="res\shader\GS-Textures\first_texture_fragment.shader" />
     <None Include="res\shader\GS-Textures\first_texture_vertex.shader" />
     <None Include="res\shader\GS-Textures\mix_textures_flip_horizontally_fragment.shader" />
