--- a/learnopengl-com/learnopengl-com.vcxproj
+++ b/learnopengl-com/learnopengl-com.vcxproj
@@ -474,6 +474,8 @@
     <None Include="res\shader\fragment_colorattr.shader" />
     <None Include="res\shader\fragment_uniform.shader" />
     <None Include="res\shader\fragment_yellow.shader" />
+    <None Include="res\shader\GS-Lighting\ex4_object_fragment.shader" />
+    <None Include="res\shader\GS-Lighting\ex4_vertex.shader" />
     <None Include="res\shader\GS-Lighting\object_fragment.shader" />
     <None Include="res\shader\GS-Lighting\light_fragment.shader" />
     <None Include="res\shader\GS-Lighting\vertex.shader" />
