--- a/learnopengl-com/learnopengl-com.vcxproj.filters
+++ b/learnopengl-com/learnopengl-com.vcxproj.filters
@@ -1452,6 +1452,8 @@
     <None Include="res\shader\GS-Lighting\vertex.shader" />
     <None Include="res\shader\GS-Lighting\light_fragment.shader" />
     <None Include="res\shader\GS-Lighting\object_fragment.shader" />
+    <None Include="res\shader\GS-Lighting\ex4_object_fragment.shader" />
+    <None Include="res\shader\GS-Lighting\ex4_vertex.shader" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\textures\awesomeface.png">
