--- a/learnopengl-com/learnopengl-com.vcxproj
+++ b/learnopengl-com/learnopengl-com.vcxproj
@@ -476,6 +476,7 @@
     <None Include="res\shader\fragment_yellow.shader" />
     <None Include="res\shader\GS-Lighting\ex4_object_fragment.shader" />
     <None Include="res\shader\GS-Lighting\ex4_vertex.shader" />
+    <None Include="res\shader\GS-Lighting\materials_fragment.shader" />
     <None Include="res\shader\GS-Lighting\object_fragment.shader" />
     <None Include="res\shader\GS-Lighting\light_fragment.shader" />
     <None Include="res\shader\GS-Lighting\vertex.shader" />
