diffuse and specular maps

--- a/learnopengl-com/learnopengl-com.vcxproj.filters
+++ b/learnopengl-com/learnopengl-com.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="src\GS-Lighting\Lighting.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="src\GS-Lighting\LightingMap.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\HelloTriangle\Hello.h">
@@ -1022,6 +1025,9 @@
     <ClInclude Include="src\GS-Lighting\Lighting.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
+    <ClInclude Include="src\GS-Lighting\LightingMap.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shader\vertex.shader" />
@@ -1455,12 +1461,21 @@
     <None Include="res\shader\GS-Lighting\ex4_object_fragment.shader" />
     <None Include="res\shader\GS-Lighting\ex4_vertex.shader" />
     <None Include="res\shader\GS-Lighting\materials_fragment.shader" />
+    <None Include="res\shader\GS-Lighting\lm_vertex.shader" />
+    <None Include="res\shader\GS-Lighting\lm_obj_fragment.shader" />
+    <None Include="res\shader\GS-Lighting\lm_light_fragment.shader" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\textures\awesomeface.png">
       <Filter>File di risorse</Filter>
     </Image>
     <Image Include="res\textures\container.jpg">
+      <Filter>File di risorse</Filter>
+    </Image>
+    <Image Include="res\textures\container2.png">
+      <Filter>File di risorse</Filter>
+    </Image>
+    <Image Include="res\textures\container2_specular.png">
       <Filter>File di risorse</Filter>
     </Image>
   </ItemGroup>
