--- a/learnopengl-com/learnopengl-com.vcxproj
+++ b/learnopengl-com/learnopengl-com.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\GS-Lighting\LightingMap.cpp" />
     <ClCompile Include="src\GS-Lighting\Lighting.cpp" />
     <ClCompile Include="src\GS-CoordinateSystems\ControlCamera.cpp" />
     <ClCompile Include="src\core\Camera.cpp" />
@@ -160,6 +161,7 @@
     <ClCompile Include="src\vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\GS-Lighting\LightingMap.h" />
     <ClInclude Include="src\GS-Lighting\Lighting.h" />
     <ClInclude Include="src\GS-CoordinateSystems\ControlCamera.h" />
     <ClInclude Include="src\core\Camera.h" />
@@ -476,6 +478,9 @@
     <None Include="res\shader\fragment_yellow.shader" />
     <None Include="res\shader\GS-Lighting\ex4_object_fragment.shader" />
     <None Include="res\shader\GS-Lighting\ex4_vertex.shader" />
+    <None Include="res\shader\GS-Lighting\lm_light_fragment.shader" />
+    <None Include="res\shader\GS-Lighting\lm_obj_fragment.shader" />
+    <None Include="res\shader\GS-Lighting\lm_vertex.shader" />
     <None Include="res\shader\GS-Lighting\materials_fragment.shader" />
     <None Include="res\shader\GS-Lighting\object_fragment.shader" />
     <None Include="res\shader\GS-Lighting\light_fragment.shader" />
@@ -633,6 +638,8 @@
   <ItemGroup>
     <Image Include="res\textures\awesomeface.png" />
     <Image Include="res\textures\container.jpg" />
+    <Image Include="res\textures\container2.png" />
+    <Image Include="res\textures\container2_specular.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
