Directional light caster

--- a/learnopengl-com/learnopengl-com.vcxproj.filters
+++ b/learnopengl-com/learnopengl-com.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClCompile Include="src\GS-Lighting\LightingMap.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="src\GS-Lighting\LightingCaster.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\HelloTriangle\Hello.h">
@@ -1028,6 +1031,9 @@
     <ClInclude Include="src\GS-Lighting\LightingMap.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
+    <ClInclude Include="src\GS-Lighting\LightingCaster.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shader\vertex.shader" />
@@ -1464,6 +1470,7 @@
     <None Include="res\shader\GS-Lighting\lm_vertex.shader" />
     <None Include="res\shader\GS-Lighting\lm_obj_fragment.shader" />
     <None Include="res\shader\GS-Lighting\lm_light_fragment.shader" />
+    <None Include="res\shader\GS-Lighting\lc_obj_fragment.shader" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\textures\awesomeface.png">
