--- a/learnopengl-com/learnopengl-com.vcxproj
+++ b/learnopengl-com/learnopengl-com.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\GS-Lighting\LightCaster_PointLight.cpp" />
     <ClCompile Include="src\GS-Lighting\LightingCaster.cpp" />
     <ClCompile Include="src\GS-Lighting\LightingMap.cpp" />
     <ClCompile Include="src\GS-Lighting\Lighting.cpp" />
@@ -162,6 +163,7 @@
     <ClCompile Include="src\vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\GS-Lighting\LightCaster_PointLight.h" />
     <ClInclude Include="src\GS-Lighting\LightingCaster.h" />
     <ClInclude Include="src\GS-Lighting\LightingMap.h" />
     <ClInclude Include="src\GS-Lighting\Lighting.h" />
@@ -481,6 +483,7 @@
     <None Include="res\shader\GS-Lighting\ex4_object_fragment.shader" />
     <None Include="res\shader\GS-Lighting\ex4_vertex.shader" />
     <None Include="res\shader\GS-Lighting\lc_obj_fragment.shader" />
+    <None Include="res\shader\GS-Lighting\lc_pl_obj_fragment.shader" />
     <None Include="res\shader\GS-Lighting\lm_light_fragment.shader" />
     <None Include="res\shader\GS-Lighting\lm_obj_fragment.shader" />
     <None Include="res\shader\GS-Lighting\lm_vertex.shader" />
